--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-<title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
+<title>{% if page.title or page.url == 'index.html' %}{{ page.title }} | {% endif %}{{ site.title }}</title>
 <meta name="title" content="{{ page.title }}" />
 <meta name="author" content="{{ page.author }}" />
 <meta name="keywords" content="{{ page.keywords }}" />
