Add Google Search Engine

--- a/_layouts/catalog.html
+++ b/_layouts/catalog.html
@@ -24,6 +24,27 @@
 					<div id="sidebar-right">
 						<div>
 
+            <!-- Google Custom Search Engine -->
+            <div class="clearfix">
+							<div class="block-inner">
+								<h2 class="block-title">Search Control Catalog</h2>
+								<div class="content" >
+                  <script>
+                    (function() {
+                      var cx = '008949092255637062974:v4emhgv403a';
+                      var gcse = document.createElement('script');
+                      gcse.type = 'text/javascript';
+                      gcse.async = true;
+                      gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                      var s = document.getElementsByTagName('script')[0];
+                      s.parentNode.insertBefore(gcse, s);
+                    })();
+                  </script>
+                  <gcse:search></gcse:search>
+								</div>
+							</div>
+						</div> <!-- /block-inner /block -->
+
             {% if site.data.catalog.audiences %}
 						<div class="clearfix">
 							<div class="block-inner">
