Update search pages

--- a/_layouts/catalog.html
+++ b/_layouts/catalog.html
@@ -40,7 +40,7 @@
                       s.parentNode.insertBefore(gcse, s);
                     })();
                   </script>
-                  <gcse:search></gcse:search>
+                  <gcse:searchbox-only></gcse:searchbox-only>
 								</div>
 							</div>
 						</div> <!-- /block-inner /block -->
