--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
 
 <head profile="http://www.w3.org/1999/xhtml/vocab">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="QeJwnKGr55ULSeSTqxS1ApkA5E96-ZmJiGA38N-5eNU" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
