Fix link to catalog search

--- a/_layouts/catalog.html
+++ b/_layouts/catalog.html
@@ -29,7 +29,7 @@
 							<div class="block-inner">
 								<h2 class="block-title">Search Control Catalog</h2>
 								<div class="content">
-                  <form action="/catalog-search.html" method="get" style="input {vertical-align: bottom;}">
+                  <form action="/catalog/search" method="get" style="input {vertical-align: bottom;}">
                     <input type="text" placeholder="Search" name="q" style="height: 2em; width: 60%;" />&nbsp;
                     <input type="submit" value="&#x1F50D;" />
                   </form>
