Remove .html from catalog entries

--- a/_includes/catalog.html
+++ b/_includes/catalog.html
@@ -24,7 +24,7 @@
 {% assign family = control.Category.Item %}
 {% endif %}
   <tr class="catalog_control_entry">
-    <td><a href="controls/{{ control.Procedure_ID }}.html">{{ control.Procedure_ID }}</a></td>
+    <td><a href="controls/{{ control.Procedure_ID }}">{{ control.Procedure_ID }}</a></td>
     <td>{{ control.Procedure_Name }}</td>
     <td>{{ control.NIST_Priority.Item }}</td>
   </tr>
